--- a/src/app/component/fornecedor/fornecedor-read/fornecedor-read.component.html
+++ b/src/app/component/fornecedor/fornecedor-read/fornecedor-read.component.html
@@ -3,7 +3,11 @@
         {{product.id}} => {{product.name}} => {{product.price}}
     </li>
 </ul> -->
+<header class="cabecalho-branco"></header>
 
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="fornecedor">
       <!-- Id Column -->
