--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -1,5 +1,10 @@
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <mat-card class="fundo1">
-    <div style="display:flex; justify-content:flex-end">
+    <div style="display:flex; justify-content:flex-inicial">
     <mat-card-title class="Nome">Novo Produto</mat-card-title>
     </div>
     <form>
@@ -42,7 +47,7 @@
         </mat-form-field>
     </form>
 
-    <div style="gap: 10px;">
+    <div style="gap: 10px; display:flex; justify-content:flex-end">
     <button mat-raised-button (click)="createProduct()" color="primary">
         Salvar
     </button>
