--- a/src/app/component/product/product-delete/product-delete.component.html
+++ b/src/app/component/product/product-delete/product-delete.component.html
@@ -1,5 +1,13 @@
+
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <mat-card class="fundo1">
-    <mat-card-title>Excluir Produto</mat-card-title>
+    <div style="display:flex; justify-content:flex-inicial">
+    <mat-card-title class="Nome">Excluir Produto</mat-card-title>
+</div>
     <form>
         <mat-form-field>
             <input matInput placeholder="Nome" [value]="product.proNome" name="proNome" disabled>
@@ -36,7 +44,7 @@
         </mat-form-field>
     </form>
 
-    <div style="gap: 10px;">
+    <div style="gap: 10px;  display:flex; justify-content:flex-end">
     <button mat-raised-button (click)="deleteProduct()" color="warn">
         Excluir
     </button>
