--- a/src/app/views/cliente-crud/cliente-crud.component.html
+++ b/src/app/views/cliente-crud/cliente-crud.component.html
@@ -1,3 +1,8 @@
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <button mat-raised-button (click)="navigateToClienteCreate()" color="primary">
     Novo Cliente
 </button>
