--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,10 @@
 <!-- Bloco superior: imagem à esquerda e informações à direita -->
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
+
 <div class="layout-container">
     <mat-card class="home3 mat-elevation-z3 image-side">
       <div class="image-container">
@@ -61,5 +67,10 @@
       
     </div>
   </mat-card>
+  <header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
   
   
