--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -1,5 +1,12 @@
 <mat-sidenav-container class="container">
-  <mat-sidenav #sidenav class="sidenav" mode="side" [opened]="menuAberto" fixedInViewport="true" fixedTopGap="64">
+  <mat-sidenav #sidenav
+  mode="side"
+  [opened]="true"
+  class="sidenav"
+  [class.expandido]="expandido"
+  fixedInViewport="true"
+  fixedTopGap="64"
+  disableClose>
     <mat-nav-list class="nav-list">
       <a mat-list-item routerLink="/">
         <i class="material-icons">home</i>
