--- a/src/app/views/cliente-crud/cliente-crud.component.css
+++ b/src/app/views/cliente-crud/cliente-crud.component.css
@@ -1,3 +1,18 @@
+.cabecalho-branco {
+  height: 64px;
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.conteudo {
+  margin-top: 64px; /* mesma altura do cabeçalho */
+  padding: 16px;
+}
 button {
     margin-bottom: 30px;
     color: rgb(255, 255, 255);
