--- a/src/app/views/fornecedor-crud/fornecedor-crud.component.html
+++ b/src/app/views/fornecedor-crud/fornecedor-crud.component.html
@@ -1,3 +1,8 @@
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <button mat-raised-button (click)="navigateToFornecedorCreate()" color="primary">
     Novo Fornecedor
 </button>
