--- a/src/app/views/pagamento-crud/pagamento-crud.component.html
+++ b/src/app/views/pagamento-crud/pagamento-crud.component.html
@@ -1,3 +1,8 @@
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
 <button mat-raised-button (click)="navigateToPagamentoCreate()" color="primary">
     Novo Pagamento
 </button>
