--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,9 @@
+<header class="cabecalho-branco"></header>
+
+<main class="conteudo">
+  <!-- Conteúdo da página -->
+</main>
+
 <button mat-raised-button (click)="navigateToProductCreate()" color="primary">
     Novo Produto
 </button>
