--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -39,7 +39,7 @@
         </ng-container>
       <!-- Name Column -->
       <ng-container matColumnDef="ativo">
-        <th mat-header-cell *matHeaderCellDef>Status Ativo</th>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let row">{{row.ativo}}</td>
       </ng-container>
       <!-- Name Column -->
