--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -36,9 +36,16 @@
             <input matInput placeholder="Unidade de Medida" [(ngModel)]="product.unidadeMedida" name="unidadeMedida">
         </mat-form-field>
         
-        <mat-form-field appearance="fill">
-            <input matInput placeholder="Ativo" [(ngModel)]="product.ativo" name="ativo">
-        </mat-form-field>
+
+
+        <mat-form-field>
+        <mat-label>Produto Ativo?</mat-label>
+        <mat-select [(ngModel)]="product.ativo" name="ativo" required>
+            <mat-option [value]="true">Ativo</mat-option>
+            <mat-option [value]="false">Inativo</mat-option>
+        </mat-select>
+      </mat-form-field>
+
         <mat-form-field appearance="fill">
             <input matInput placeholder="Data de Cadastro" [(ngModel)]="product.dataCadastro" name="dataCadastro">
         </mat-form-field>
