--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -7,7 +7,7 @@
         
     </span>
     <span class="title-group">
-        <a href="app-inicial.component.html">
+        <a mat-list-item routerLink="/inicial">
             <i class="material-icons">
                 dashboard
             </i>
