--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -16,7 +16,13 @@
         <th mat-header-cell *matHeaderCellDef>Id</th>
         <td mat-cell *matCellDef="let row">{{row.proId}}</td>
       </ng-container>
-  
+
+      <!-- Id Column -->
+      <ng-container matColumnDef="proFornecedor">
+        <th mat-header-cell *matHeaderCellDef>Id do Fornecedor Pertencente</th>
+        <td mat-cell *matCellDef="let row">{{row.proFornecedor}}</td>
+      </ng-container>
+      
       <!-- Name Column -->
       <ng-container matColumnDef="proNome">
         <th mat-header-cell *matHeaderCellDef>Nome</th>
