--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -16,7 +16,7 @@
     </span>
     <span class="title-group3">
         <a>
-            <img class="logo" src="assets/img/LoveCity.png" alt="logo2">
+            <img class="logo" class="logo azul-escuro" src="assets/img/LoveCity.png" alt="logo2">
         </a>
     </span>
 </mat-toolbar>
